--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,18 +1,19 @@
 {
   "name": "AI GitHub Analyzer",
-  "short_name": "AIAnalyzer",
+  "short_name": "GitAnalyzer",
   "start_url": ".",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#0d1117",
+  "description": "AI-powered GitHub repository insights in a PWA",
   "icons": [
     {
-      "src": "/icons/icon-192.png",
+      "src": "/icons/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/icons/icon-512.png",
+      "src": "/icons/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
